--- a/packages/altfuel-ticket/src/public/css/style.css
+++ b/packages/altfuel-ticket/src/public/css/style.css
@@ -25,7 +25,7 @@
 
 @media (max-width: 500px) {
     .score-label{
-        margin: 0 5px;
+        margin: 0px 10px;
         width: 10px;
         font-size: 20px;
     }
